--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,4 +1,7 @@
-.container {
+.wrapper {
   max-width: $website-width;
   margin: 0 auto;
+  padding: 2rem;
+  min-height: 100vh;
+  @include flexy($just: center, $align: center);
 }
