--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,7 +8,8 @@
 @import 'base/utilities';
 
 // COMPONENTS
-@import 'components/price-card';
+@import 'components/card';
+@import 'components/buttons';
 
 // // LAYOUT
 // @import 'layout/grid';
