--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,110 @@
-.container {
-  max-width: 1080px; }
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  background-color: #e5eff5;
+  box-sizing: inherit; }
+
+a {
+  text-decoration: none; }
+
+ul {
+  list-style: none; }
+
+img {
+  max-width: 100%;
+  display: block; }
+
+body {
+  font-family: "Karla", sans-serif;
+  font-size: 16px;
+  line-height: 1.6; }
+
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 2rem;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 1.3px 4.3px rgba(0, 0, 0, 0.036), 0 4.2px 14.5px rgba(0, 0, 0, 0.054), 0 19px 65px rgba(0, 0, 0, 0.09); }
+  @media (max-width: 768px) {
+    .card {
+      grid-template-columns: 1fr; } }
+  .card__heading {
+    font-size: 1.4rem;
+    margin-bottom: .75rem;
+    color: #fff; }
+    .card__heading--green {
+      color: #c0df34; }
+  .card__paragraph {
+    font-size: 1.2rem;
+    color: #fff; }
+    .card__paragraph--dark {
+      color: rgba(51, 51, 51, 0.495); }
+    .card__paragraph--light {
+      opacity: .3;
+      position: absolute;
+      top: 16px;
+      left: 90px; }
+    .card__paragraph--price {
+      font-size: 2.5rem; }
+  .card__pricing {
+    position: relative; }
+  .card__top, .card__left, .card__right {
+    padding: 3rem; }
+    @media (max-width: 768px) {
+      .card__top, .card__left, .card__right {
+        padding: 2rem; } }
+  .card__top {
+    background-color: #fff;
+    grid-column: 1 / 3; }
+    @media (max-width: 768px) {
+      .card__top {
+        grid-column: 1 / 1; } }
+    .card__top-heading {
+      font-size: 1.8rem;
+      margin-bottom: 1.2rem;
+      color: #2ab2af; }
+  .card__left {
+    background-color: #2ab2af; }
+  .card__right {
+    background-color: #4ABEBD; }
+  .card__list li {
+    color: #fff;
+    opacity: .6; }
+
+.btn {
+  display: inline-block;
+  padding: 0.8rem 2rem;
+  transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  backface-visibility: hidden;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 1.3px 4.3px rgba(0, 0, 0, 0.036), 0 4.2px 14.5px rgba(0, 0, 0, 0.054), 0 19px 65px rgba(0, 0, 0, 0.09); }
+
+.btn--main {
+  width: 100%;
+  background-color: #c0df34;
+  color: #fff;
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  border-radius: 3px; }
+  .btn--main:hover {
+    transform: translateY(-2px) scale(1.025); }
+    @media (max-width: 768px) {
+      .btn--main:hover {
+        transform: none; } }
 
 /*# sourceMappingURL=styles.css.map */
