--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,1 +1,23 @@
-$website-width: 1080px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: $light-grey-color;
+  box-sizing: inherit;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
