--- a/css/styles.css
+++ b/css/styles.css
@@ -53,14 +53,13 @@ body {
     .card__paragraph--dark {
       color: rgba(51, 51, 51, 0.495); }
     .card__paragraph--light {
-      opacity: .3;
-      position: absolute;
-      top: 16px;
-      left: 90px; }
+      opacity: .3; }
     .card__paragraph--price {
-      font-size: 2.5rem; }
+      font-size: 2.5rem;
+      margin-right: 1rem; }
   .card__pricing {
-    position: relative; }
+    display: flex;
+    align-items: center; }
   .card__top, .card__left, .card__right {
     padding: 3rem; }
     @media (max-width: 768px) {
@@ -88,7 +87,6 @@ body {
   display: inline-block;
   padding: 0.8rem 2rem;
   transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
-  backface-visibility: hidden;
   border: none;
   cursor: pointer;
   box-shadow: 0 1.3px 4.3px rgba(0, 0, 0, 0.036), 0 4.2px 14.5px rgba(0, 0, 0, 0.054), 0 19px 65px rgba(0, 0, 0, 0.09); }
