--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,10 +3,11 @@
   display: inline-block;
   padding: 0.8rem 2rem;
   transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
-  backface-visibility: hidden;
+  // backface-visibility: hidden;
   border: none;
   cursor: pointer;
   box-shadow: $box-shadow;
+  // will-change: transform;
 }
 
 .btn {
