--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -29,18 +29,22 @@
 
     &--light {
       opacity: .3;
-      position: absolute;
-      top: 16px;
-      left: 90px;
+      // position: absolute;
+      // top: 50%;
+      // left: 50%;
+      // transform: translate(-50%, -50%);
     }
 
     &--price {
       font-size: 2.5rem;
+      margin-right: 1rem;
     }
   }
 
   &__pricing {
-    position: relative;
+    // position: relative;
+    display: flex;
+    align-items: center;
   }
 
   &__top,
